# mem-alloc

./: CMakeLists.txt  README.md
.github/workflows/: cmake.yml
cmake/: CMakeLists.txt  Generic.cmake  Linux.cmake  Unix.cmake  gnu.cmake
include/: config.h  mem.h  mem_it.h
src/: CMakeLists.txt
src/mem/: mem1.c  mem2.c  mem_it.c  mem_it.h  mem_list_p.c  mem_pool_p.c  mem_util.c
src/test/: main.c  main.cpp  test.c  test_list.c  test_pool.c  tests.h
test/: CMakeLists.txt  pmr.cpp  test_list.c  test_list_s.c  test_pmr.cpp  test_pool.c
